force-app/main/default/objects/Opportunity/fields/LastStageChangeDate__c.field-meta.xml
<CustomField>
    <fullName>LastStageChangeDate__c</fullName>
    <description
  >Tracks the date when the Opportunity StageName was last changed.</description>
    <inlineHelpText
  >Automatically updated to today's date whenever the Opportunity stage changes.</inlineHelpText>
    <label>Last Stage Change Date</label>
    <type>Date</type>
</CustomField>