force-app/main/default/objects/Opportunity/fields/Loss_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Details__c</fullName>
    <description
  >Narrative details explaining why the Opportunity was Closed Lost.</description>
    <inlineHelpText
  >Provide details explaining why this Opportunity was marked Closed Lost.</inlineHelpText>
    <label>Loss Reason Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>