force-app/main/default/objects/Opportunity/fields/Restricted__c.field-meta.xml
<CustomField>
    <fullName>Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates the Opportunity contains Restricted information.</description>
    <inlineHelpText
  >Select when the Opportunity is classified as Restricted.</inlineHelpText>
    <label>Restricted</label>
    <type>Checkbox</type>
</CustomField>