force-app/main/default/objects/Opportunity/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <description
  >Industry sector classification for this opportunity. Used to categorize opportunities by the target market or industry vertical.</description>
    <inlineHelpText
  >Select the primary industry sector that best describes this opportunity. This helps with pipeline segmentation and reporting by market vertical.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetName>Sector</valueSetName>
    </valueSet>
</CustomField>