force-app/main/default/objects/Opportunity/fields/Top_Secret__c.field-meta.xml
<CustomField>
    <fullName>Top_Secret__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates the Opportunity contains Top Secret information.</description>
    <inlineHelpText
  >Select when the Opportunity is classified as Top Secret.</inlineHelpText>
    <label>Top Secret</label>
    <type>Checkbox</type>
</CustomField>