force-app/main/default/objects/Opportunity/validationRules/LossReason_OnlyAllowed_On_ClosedLost.validationRule-meta.xml
<ValidationRule>
    <fullName>LossReason_OnlyAllowed_On_ClosedLost</fullName>
    <active>true</active>
    <description
  >Prevents Loss Reason from being populated on any stage other than Closed Lost.</description>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
  NOT(ISBLANK(TEXT(Loss_Reason__c)))
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage
  >Loss Reason can only be set when the stage is Closed Lost.</errorMessage>
</ValidationRule>